--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <div class="game-container">
@@ -22,6 +22,6 @@
         </div>
         <div id="playerName" class="hidden"></div>
     </div>
-    <script src="game.js"></script>
+    <script src="src/game.js"></script>
 </body>
 </html>
